[gd_scene load_steps=37 format=3 uid="uid://dftfnhxmyn5ec"]

[ext_resource type="Script" path="res://battle/battle.gd" id="1_crs81"]
[ext_resource type="Texture2D" uid="uid://cjb8ivjvrlgfy" path="res://art/battle/battle_backgroud.png" id="1_e4gt8"]
[ext_resource type="PackedScene" uid="uid://c5gn22t0h05w4" path="res://art/battle/player.tscn" id="2_ectpx"]
[ext_resource type="PackedScene" uid="uid://c5srb2kcjkmsm" path="res://art/battle/pig.tscn" id="3_4h6un"]
[ext_resource type="Script" path="res://battle/UI.gd" id="4_1abmk"]
[ext_resource type="Script" path="res://battle/player.gd" id="4_bfy1r"]
[ext_resource type="Script" path="res://battle/info/attribute.gd" id="5_5l6m1"]
[ext_resource type="Script" path="res://battle/info/info.gd" id="6_fn5t5"]
[ext_resource type="Script" path="res://battle/info/equip.gd" id="6_xgivr"]
[ext_resource type="Script" path="res://battle/enemy.gd" id="7_140bm"]
[ext_resource type="Script" path="res://battle/info/spell.gd" id="7_dsro2"]
[ext_resource type="Resource" uid="uid://cqpvnjr8eq605" path="res://resources/default_cost.tres" id="11_b645g"]

[sub_resource type="Resource" id="Resource_00dw6"]
resource_local_to_scene = true
script = ExtResource("7_dsro2")
spell_name = "普通攻击魔法"
spell_properties = Vector4(1, 0, 0, 1)
speicies = 0
cost = ExtResource("11_b645g")

[sub_resource type="Resource" id="Resource_tjqep"]
resource_local_to_scene = true
script = ExtResource("5_5l6m1")
species = 0
hp = Vector2(300, 0)
sp = Vector2(100, 0)
atk = Vector2(50, 0)
def = Vector2(25, 0)

[sub_resource type="Resource" id="Resource_wrrd1"]
resource_local_to_scene = true
script = ExtResource("7_dsro2")
spell_name = "default_defend"
spell_properties = Vector4(1, 0, 0, 1)
speicies = 1
cost = ExtResource("11_b645g")

[sub_resource type="Resource" id="Resource_tvdwg"]
resource_local_to_scene = true
script = ExtResource("5_5l6m1")
species = 0
hp = Vector2(300, 0)
sp = Vector2(150, 0)
atk = Vector2(50, 0)
def = Vector2(25, 0)

[sub_resource type="Resource" id="Resource_f8r4u"]
resource_local_to_scene = true
script = ExtResource("6_xgivr")
crystal = 0
equip = 1
quality = 0.3

[sub_resource type="Resource" id="Resource_f55yg"]
resource_local_to_scene = true
script = ExtResource("6_xgivr")
crystal = 2
equip = 0
quality = 0.3

[sub_resource type="Resource" id="Resource_07epc"]
resource_local_to_scene = true
script = ExtResource("6_fn5t5")
attribute = SubResource("Resource_tjqep")
limits = SubResource("Resource_tvdwg")
wand = SubResource("Resource_f55yg")
sheild = SubResource("Resource_f8r4u")
attack_spell = SubResource("Resource_00dw6")
defend_spell = SubResource("Resource_wrrd1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eer0c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_docie"]
bg_color = Color(0, 0.976471, 0.0431373, 1)

[sub_resource type="Resource" id="Resource_eymym"]
resource_local_to_scene = true
script = ExtResource("7_dsro2")
spell_name = "撕咬魔法"
spell_properties = Vector4(1, 0, 0, 1)
speicies = 0
cost = ExtResource("11_b645g")

[sub_resource type="Resource" id="Resource_mwjlc"]
resource_local_to_scene = true
script = ExtResource("5_5l6m1")
species = 0
hp = Vector2(300, 0)
sp = Vector2(100, 0)
atk = Vector2(50, 0)
def = Vector2(25, 0)

[sub_resource type="Resource" id="Resource_vxjid"]
resource_local_to_scene = true
script = ExtResource("7_dsro2")
spell_name = "default_defend"
spell_properties = Vector4(1, 0, 0, 1)
speicies = 1
cost = ExtResource("11_b645g")

[sub_resource type="Resource" id="Resource_4wtrx"]
resource_local_to_scene = true
script = ExtResource("5_5l6m1")
species = 0
hp = Vector2(500, 0)
sp = Vector2(100, 0)
atk = Vector2(50, 0)
def = Vector2(25, 0)

[sub_resource type="Resource" id="Resource_cqjev"]
resource_local_to_scene = true
script = ExtResource("6_xgivr")
crystal = 0
equip = 1
quality = 0.1

[sub_resource type="Resource" id="Resource_mybyp"]
resource_local_to_scene = true
script = ExtResource("6_xgivr")
crystal = 0
equip = 0
quality = 0.3

[sub_resource type="Resource" id="Resource_0wxvd"]
script = ExtResource("6_fn5t5")
attribute = SubResource("Resource_mwjlc")
limits = SubResource("Resource_4wtrx")
wand = SubResource("Resource_mybyp")
sheild = SubResource("Resource_cqjev")
attack_spell = SubResource("Resource_eymym")
defend_spell = SubResource("Resource_vxjid")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dto8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10khe"]
bg_color = Color(0.929412, 0.054902, 0.0313726, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnmbd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ltffe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gy8el"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mm3sf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3s3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lgb5"]
bg_color = Color(0.498156, 0.596989, 0.817426, 1)

[node name="battle_scene" type="CanvasLayer"]
script = ExtResource("1_crs81")

[node name="BattleBackgroud" type="Sprite2D" parent="."]
position = Vector2(576, 324.75)
scale = Vector2(1.05699, 0.999225)
texture = ExtResource("1_e4gt8")
metadata/_edit_lock_ = true

[node name="player" type="Node2D" parent="."]
script = ExtResource("4_bfy1r")
info = SubResource("Resource_07epc")

[node name="Node2D" parent="player" instance=ExtResource("2_ectpx")]
position = Vector2(329, 382)

[node name="UI" type="Control" parent="player"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="info" type="Label" parent="player/UI"]
layout_mode = 0
offset_left = 742.0
offset_top = 369.0
offset_right = 798.0
offset_bottom = 413.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "冒险者"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hptxt" type="Label" parent="player/UI"]
layout_mode = 0
offset_left = 1008.0
offset_top = 430.0
offset_right = 1051.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="player/UI"]
layout_mode = 0
offset_left = 798.0
offset_top = 413.0
offset_right = 1119.0
offset_bottom = 430.0
theme_override_styles/background = SubResource("StyleBoxEmpty_eer0c")
theme_override_styles/fill = SubResource("StyleBoxFlat_docie")
value = 100.0
show_percentage = false

[node name="enemy" type="Node2D" parent="."]
script = ExtResource("7_140bm")
info = SubResource("Resource_0wxvd")

[node name="Node2D" parent="enemy" instance=ExtResource("3_4h6un")]
position = Vector2(797, 296)

[node name="UI" type="Control" parent="enemy"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="info" type="Label" parent="enemy/UI"]
layout_mode = 0
offset_left = 76.0
offset_top = 31.0
offset_right = 172.0
offset_bottom = 66.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "小野猪"

[node name="hptxt" type="Label" parent="enemy/UI"]
layout_mode = 0
offset_left = 344.0
offset_top = 31.0
offset_right = 414.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="enemy/UI"]
layout_mode = 0
offset_left = 135.0
offset_top = 66.0
offset_right = 459.0
offset_bottom = 88.0
theme_override_styles/background = SubResource("StyleBoxEmpty_dto8e")
theme_override_styles/fill = SubResource("StyleBoxFlat_10khe")
value = 100.0
show_percentage = false

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 670.0
offset_top = 523.0
offset_right = 1116.0
offset_bottom = 619.0
scale = Vector2(2, 2)
script = ExtResource("4_1abmk")

[node name="GridContainer" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 28.5
offset_right = 251.5
offset_bottom = 66.0
theme_override_constants/h_separation = 30
columns = 3

[node name="Button" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "攻击"

[node name="Button2" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "防御"

[node name="Button3" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "背包"

[node name="Button4" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "戳刺"

[node name="Button5" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "终结"

[node name="Button6" type="Button" parent="UI/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_lnmbd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ltffe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gy8el")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mm3sf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m3s3g")
text = "逃跑"

[node name="next" type="Button" parent="UI"]
layout_mode = 0
offset_left = -51.5
offset_right = -11.5
offset_bottom = 52.0
theme_override_styles/normal = SubResource("StyleBoxFlat_4lgb5")
text = "下一
回合"

[node name="action" type="Label" parent="."]
offset_left = 55.0
offset_top = 532.0
offset_right = 552.0
offset_bottom = 607.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "野生的小野猪出现了！"

[node name="MessageTimer" type="Timer" parent="action"]
wait_time = 1.3

[connection signal="created_damage" from="player" to="enemy" method="_on_player_created_damage"]
[connection signal="exit_battle" from="player" to="." method="_on_player_exit_battle"]
[connection signal="created_damage" from="enemy" to="player" method="_on_enemy_created_damage"]
[connection signal="exit_battle" from="enemy" to="." method="_on_enemy_exit_battle"]
[connection signal="pressed" from="UI/GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/next" to="." method="_on_next_pressed"]
